Переделал шильдики на всех карточках; удалил несколько лишних скриптов

--- a/404.html
+++ b/404.html
@@ -1922,37 +1922,37 @@
         <main>
             <div class="not-found">
                 <div class="container">
-                    <a class="not-found__return" href="./catalog.html">
+                    <a class="not-found__return skeleton" href="./catalog.html">
                         Вернуться в каталог
                     </a>
                     <div class="not-found__content">
                         <div class="not-found__text">
-                            <h2 class="not-found__title">
+                            <h2 class="not-found__title skeleton">
                                 Страница не найдена
                             </h2>
-                            <p class="not-found__descr">
+                            <p class="not-found__descr skeleton">
                                 Кажется, что-то пошло не так! <br>
                                 Запрашиваемая страница не существует <br>
                                 Возможно, она устарела или была удалена
                             </p>
-                            <a class="rect-btn rect-btn--not-found white" href="https://t.me/ekromshop">
+                            <a class="rect-btn rect-btn--not-found white skeleton" href="https://t.me/ekromshop">
                                 Перейти в Telegram
                             </a>
-                            <p class="not-found__subtext">
+                            <p class="not-found__subtext skeleton">
                                 или позвоните нам, чтобы сообщить об ошибке
                                 <a href="tel:+73433799868">
                                     8 (343) 379-98-68
                                 </a>
                             </p>
                         </div>
-                        <div class="not-found__code">
+                        <div class="not-found__code skeleton">
                             <p>404</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="feedback-banner">
+            <div class="feedback-banner skeleton">
                 <div class="container">
                     <div class="feedback-banner__inner">
                         <p class="feedback-banner__text">
