--- a/catalog.html
+++ b/catalog.html
@@ -1949,7 +1949,7 @@
             <div class="catalog">
                 <div class="container">
                     <nav class="catalog__categories">
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/1.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2030,7 +2030,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/2.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2101,7 +2101,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/3.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2145,7 +2145,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/4.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2236,7 +2236,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/5.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2267,7 +2267,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/6.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2323,7 +2323,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/7.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2359,7 +2359,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/8.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2395,7 +2395,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="catalog__categories-box">
+                        <div class="catalog__categories-box skeleton">
                             <img src="./img/icons/catalog/9.svg" alt="">
                             <ul class="catalog__categories-list">
                                 <li class="catalog__categories-item">
@@ -2421,7 +2421,7 @@
 
             </div>
 
-            <div class="feedback-banner">
+            <div class="feedback-banner skeleton">
                 <div class="container">
                     <div class="feedback-banner__inner">
                         <p class="feedback-banner__text">
