--- a/order.html
+++ b/order.html
@@ -2511,7 +2511,7 @@
     
             <div class="order-apply">
                 <div class="container">
-                    <a class="order-apply__return-to-catalog" href="./catalog.html">
+                    <a class="order-apply__return-to-catalog skeleton" href="./catalog.html">
                         Вернуться в каталог
                     </a>
                     <div class="order-apply__box skeleton">
@@ -2534,7 +2534,7 @@
                 </div>
             </div>
     
-            <div class="feedback-banner">
+            <div class="feedback-banner skeleton">
                 <div class="container">
                     <div class="feedback-banner__inner">
                         <p class="feedback-banner__text">
