Сверстал страницу авторизации для мобильной версии

--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@
                                 </button>
                             </li>
                             <li class="header__mobile-link">
-                                <a href="./personal.html">
+                                <a href="./auth.html">
                                     <img src="./img/icons/header-mobile/user.svg" alt="">
                                 </a>
                             </li>
@@ -2059,7 +2059,7 @@
                             </a>
                         </div>
                     </div>
-                    <a class="rect-btn rect-btn--popular blue" href="#">
+                    <a class="rect-btn rect-btn--popular blue skeleton" href="#">
                         Посмотреть все категории
                     </a>
                 </div>
@@ -2153,10 +2153,10 @@
                         <h2>Популярные готовые комплекты</h2>
                         <p>Комплекты, сформированные под ваши нужды</p>
                     </div>
-                    <div class="complects__wrapper">
+                    <div class="complects__wrapper skeleton">
                         <div class="swiper complects-swiper">
                             <div class="swiper-wrapper compeclts-swiper-wrapper complects__inner">
-                                <a class="swiper-slide complect-swiper-slide complects__item skeleton"
+                                <a class="swiper-slide complect-swiper-slide complects__item "
                                     href="./product.html">
                                     <div class="complects__item-label">
                                         -37%
@@ -2183,7 +2183,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="swiper-slide complect-swiper-slide complects__item skeleton"
+                                <a class="swiper-slide complect-swiper-slide complects__item "
                                     href="./product.html">
                                     <div class="complects__item-label">
                                         -37%
@@ -2210,7 +2210,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="swiper-slide complect-swiper-slide complects__item skeleton"
+                                <a class="swiper-slide complect-swiper-slide complects__item "
                                     href="./product.html">
                                     <div class="complects__item-label">
                                         -37%
@@ -2340,7 +2340,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -2473,7 +2473,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -2492,7 +2492,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -2638,7 +2638,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -2772,7 +2772,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -2791,7 +2791,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -2931,7 +2931,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -3064,7 +3064,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -3083,7 +3083,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -3229,7 +3229,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -3362,7 +3362,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -3381,7 +3381,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -3524,7 +3524,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -3657,7 +3657,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -3676,7 +3676,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -3819,7 +3819,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -3952,7 +3952,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -3971,7 +3971,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -4114,7 +4114,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -4247,7 +4247,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -4266,7 +4266,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -4409,7 +4409,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -4542,7 +4542,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -4561,7 +4561,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -4704,7 +4704,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -4837,7 +4837,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -4856,7 +4856,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -4999,7 +4999,7 @@
                                                     Артикул: 25.040.B0580.401
                                                 </div>
 
-                                                <div class="product-card__color">
+                                                <div class="product-card__color skeleton">
                                                     <div class="product-card__color-item">
                                                         <label class="product-card__color-label checked"
                                                             style="background-color: #D80027;">
@@ -5132,7 +5132,7 @@
                                         </div>
 
                                         <div class="product-card__mobile-footer">
-                                            <button class="product-card__mobile-cart active">
+                                            <button class="product-card__mobile-cart skeleton active">
                                                 В корзину
                                             </button>
 
@@ -5151,7 +5151,7 @@
 
 
                                         <div class="product-card__footer">
-                                            <div class="product-card__color">
+                                            <div class="product-card__color skeleton">
                                                 <div class="product-card__color-item">
                                                     <label class="product-card__color-label checked"
                                                         style="background-color: #D80027;">
@@ -6967,7 +6967,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="./personal.html">
+                <a href="./auth.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9 9C11.0711 9 12.75 7.32107 12.75 5.25C12.75 3.17893 11.0711 1.5 9 1.5C6.92893 1.5 5.25 3.17893 5.25 5.25C5.25 7.32107 6.92893 9 9 9Z"
