--- a/order.html
+++ b/order.html
@@ -1571,7 +1571,7 @@
                                 </button>
                             </li>
                             <li class="header__mobile-link">
-                                <a href="./personal.html">
+                                <a href="./auth.html">
                                     <img src="./img/icons/header-mobile/user.svg" alt="">
                                 </a>
                             </li>
