--- a/cart.html
+++ b/cart.html
@@ -1576,7 +1576,7 @@
                                 </button>
                             </li>
                             <li class="header__mobile-link">
-                                <a href="./personal.html">
+                                <a href="./auth.html">
                                     <img src="./img/icons/header-mobile/user.svg" alt="">
                                 </a>
                             </li>
@@ -5062,7 +5062,7 @@
                 </a>
             </li>
             <li class="mobile-bottom-menu__item">
-                <a href="./personal.html">
+                <a href="./auth.html">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M9 9C11.0711 9 12.75 7.32107 12.75 5.25C12.75 3.17893 11.0711 1.5 9 1.5C6.92893 1.5 5.25 3.17893 5.25 5.25C5.25 7.32107 6.92893 9 9 9Z"
