Сделал адаптив корзины; дописал скрипты для мобильной версии корзины; пофиксил некоторые стили и скрипты

--- a/auth.html
+++ b/auth.html
@@ -21,7 +21,7 @@
                         <a class="header__mobile-auth-return" href="#">
                             <img src="./img/icons/return-catalog-white.svg" alt="">
                         </a>
-                        <h2 class="header__mobile-auth-title">
+                        <h2 class="header__mobile-title header__mobile-title--auth">
                             Вход
                         </h2>
                     </div>
