Закончил адаптив корзины; сделал адаптив формы обратной связи

--- a/cart.html
+++ b/cart.html
@@ -2701,7 +2701,7 @@
 
                                     <div class="product-card__name skeleton">
                                         <a class="product-card__name" href="./product.html">
-                                            Мойка кухонная Dr.Gans Берта-760
+                                            Мойка кухонная Dr.Gans Берта-760 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequuntur fugiat optio itaque maiores sit?
                                         </a>
                                     </div>
 
