Закончил адаптив страницы оформления заказа

--- a/cart.html
+++ b/cart.html
@@ -2612,7 +2612,7 @@
                 </div>
             </div> 
 
-            <div class="cart-empty" style="display: none;">
+            <div class="cart-empty" style="display: block;">
                 <div class="container">
                     <div class="cart-empty__inner skeleton">
                         <img src="./img/icons/cart-empty.svg" alt="">
